Fix authentication page on mobile

--- a/src/components/Layout/AuthenticationPage.module.css
+++ b/src/components/Layout/AuthenticationPage.module.css
@@ -15,6 +15,16 @@
   padding: 20px;
 }
 
+@media (max-width: 750px) {
+  .authentication-form {
+    flex-direction: column;
+  }
+  .image-background img {
+    width: 100%;
+    max-width: 300px;
+  }
+}
+
 .form-container {
   flex: 1;
 }
